Allow the SAML IdP cert to be configured based on env
__Why__
The current setup forced one SAML IdP cert across all app environments.

__How__
Remove the current SAML IdP cert from the repo and move to a .example file like
the SAML IdP key. Update the SAML PKI generator script to create a .example cert
and modify the setup script to copy the .example cert and key.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 before_script:
   - cp config/database.yml.example config/database.yml
   - cp config/application.yml.example config/application.yml
+  - cp certs/saml_idp.crt.example certs/saml_idp.crt
   - cp keys/saml.key.enc.example keys/saml.key.enc
   - bin/rake db:setup --trace
   - bin/rake assets:precompile
