--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -4,13 +4,13 @@ test:
       acs_url: 'http://localhost:3000/test/saml/decode_assertion'
       assertion_consumer_logout_service_url: 'http://localhost:3000/test/saml/decode_slo_request'
       sp_initiated_login_url: 'http://localhost:3000/test/saml'
-      cert: 'saml_cert'
+      cert: 'saml_test_sp'
 
     'https://rp1.serviceprovider.com/auth/saml/metadata':
       acs_url: 'http://example.com/test/saml/decode_assertion'
       assertion_consumer_logout_service_url: 'http://example.com/test/saml/decode_slo_request'
       sp_initiated_login_url: 'https://example.com/auth/saml/login'
-      cert: 'saml_cert'
+      cert: 'saml_test_sp'
 
 development:
   valid_hosts:
@@ -19,7 +19,7 @@ development:
       acs_url: 'http://localhost:3000/test/saml/decode_assertion'
       assertion_consumer_logout_service_url: 'http://localhost:3000/test/saml/decode_slo_request'
       sp_initiated_login_url: 'http://localhost:3000/test/saml'
-      cert: 'saml_cert'
+      cert: 'saml_test_sp'
       fingerprint: 'F9:A3:9B:2F:8F:1C:E2:79:27:69:EB:32:ED:2A:D5:A2:A7:58:5F:C0:74:8A:4A:03:D9:0F:77:A5:89:7F:F9:68'
     'urn:gov:gsa:SAML:2.0.profiles:sp:sso:localhost':
       metadata_url: 'http://localhost:4567/saml/metadata'
@@ -45,7 +45,7 @@ production:
       acs_url: 'https://upaya-dev.18f.gov/test/saml/decode_assertion'
       assertion_consumer_logout_service_url: 'https://upaya-dev.18f.gov/test/saml/decode_logoutresponse'
       sp_initiated_login_url: 'https://upaya-dev.18f.gov/test/saml'
-      cert: 'saml_client_cert'
+      cert: 'saml_test_sp'
       block_encryption: 'aes256-cbc'
     'urn:gov:gsa:SAML:2.0.profiles:sp:sso:localhost':
       metadata_url: 'http://localhost:4567/saml/metadata'
